posibilidad de make clean. Extra: cmake :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
 project(juego-vida)
 
+add_definitions(-std=c99)
+
 add_executable(juego-vida world.c main.c)
 target_link_libraries(juego-vida ssl crypto)
 
 add_custom_target(check
-        checkpatch.pl -q --no-tree -f --fix-inplace *.c)
+        checkpatch.pl -q --no-tree -f --fix-inplace ${CMAKE_SOURCE_DIR}/*.c)
