parsing options from file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,8 @@ add_custom_target(check
 
 add_custom_target(download
         wget "http://www.mcs.anl.gov/~kazutomo/list/list.h" -O "${CMAKE_SOURCE_DIR}/list.h")
+
+enable_testing()
+
+add_test(NAME command_line_parsing_complex
+        COMMAND ${CMAKE_BINARY_DIR}/juego-vida -f ${CMAKE_SOURCE_DIR}/juego-vida.args -d 45 -f ${CMAKE_SOURCE_DIR}/juego-vida.args -r 5 -c 2 -d 50 -f ${CMAKE_SOURCE_DIR}/juego-vida.args -d 50 -r 10 -c 50 -g 5)
