--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ enable_testing()
 add_test(NAME command_line_parsing_complex
         COMMAND juego-vida -f ${CMAKE_SOURCE_DIR}/juego-vida.args -d 45 -f ${CMAKE_SOURCE_DIR}/juego-vida.args -r 5 -c 2 -d 50 -f ${CMAKE_SOURCE_DIR}/juego-vida.args -d 50 -r 10 -c 50 -g 5)
 
+add_test(NAME command_line_prevent_infinite_loop
+        COMMAND juego-vida -f ${CMAKE_SOURCE_DIR}/test_infinite_loop.args)
+
 add_test(NAME output_stats_for_gnuplot
         COMMAND juego-vida -g 15 -o juego-vida.plot)
 
